Refactored the cmake files to be easier to read, the main could use more work though

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -120,148 +120,58 @@ set(GLideN64_SOURCES
   uCodes/ZSortBOSS.cpp
 )
 
+set(GLideN64_SOURCES_UNIX
+  MupenPlusPluginAPI.cpp
+  mupenplus/Config_mupenplus.cpp
+  mupenplus/CommonAPIImpl_mupenplus.cpp
+  mupenplus/MemoryStatus_mupenplus.cpp
+  mupenplus/MupenPlusAPIImpl.cpp
+  Graphics/OpenGLContext/mupen64plus/mupen64plus_DisplayWindow.cpp
+  )
+
+set(GLideN64_SOURCES_WIN
+  ZilmarPluginAPI.cpp
+  windows/Config_windows.cpp
+  windows/CommonAPIImpl_windows.cpp
+  windows/GLideN64_windows.cpp
+  windows/MemoryStatus_windows.cpp
+  common/GLFunctions.cpp
+  windows/ZilmarAPIImpl_windows.cpp
+  Graphics/OpenGLContext/windows/windows_DisplayWindow.cpp
+  )
+
+set(GLideN64_SOURCES_ANDROID
+   Log_android.cpp
+   Graphics/OpenGLContext/opengl_ColorBufferReaderWithEGLImage.cpp
+   Graphics/OpenGLContext/GraphicBuffer/PrivateApi/GraphicBuffer.cpp
+   Graphics/OpenGLContext/GraphicBuffer/PrivateApi/libhardware.cpp
+   Graphics/OpenGLContext/GraphicBuffer/PublicApi/android_hardware_buffer_compat.cpp
+   Graphics/OpenGLContext/GraphicBuffer/GraphicBufferWrapper.cpp
+  )
+
 #check if we're running on Raspberry Pi
 if(EXISTS "${CMAKE_FIND_ROOT_PATH}/opt/vc/include/bcm_host.h" AND NOT MESA)
   message("bcm_host.h found")
   set(BCMHOST ON)
   set(EGL ON)
   set(EGL_LIB -lbrcmEGL -lbrcmGLESv2)
-  add_definitions(
-    -DVC
-  )
-  include_directories(
-    "${CMAKE_FIND_ROOT_PATH}/opt/vc/include"
-    "${CMAKE_FIND_ROOT_PATH}/opt/vc/include/interface/vcos"
-    "${CMAKE_FIND_ROOT_PATH}/opt/vc/include/interface/vmcs_host/linux"
-    "${CMAKE_FIND_ROOT_PATH}/opt/vc/include/interface/vcos/pthreads"
-  )
-  link_directories(
-    "${CMAKE_FIND_ROOT_PATH}/opt/vc/lib"
-    "${CMAKE_FIND_ROOT_PATH}/opt/vc/lib/GL"
-  )
 else(EXISTS "${CMAKE_FIND_ROOT_PATH}/opt/vc/include/bcm_host.h" AND NOT MESA)
   set(EGL_LIB -lEGL)
 endif(EXISTS "${CMAKE_FIND_ROOT_PATH}/opt/vc/include/bcm_host.h" AND NOT MESA)
 
-if(MUPENPLUSAPI)
-  add_definitions(
-	-DMUPENPLUSAPI
-		-DTXFILTER_LIB
-  )
-  include_directories( . inc )
-  set(GLideN64_SOURCES_UNIX
-	MupenPlusPluginAPI.cpp
-	mupenplus/Config_mupenplus.cpp
-	mupenplus/CommonAPIImpl_mupenplus.cpp
-	mupenplus/MemoryStatus_mupenplus.cpp
-	mupenplus/MupenPlusAPIImpl.cpp
-	Graphics/OpenGLContext/mupen64plus/mupen64plus_DisplayWindow.cpp
-  )
-
-  set(GLideN64_SOURCES_WIN ${GLideN64_SOURCES_UNIX}
-  )
-  if (ANDROID)
-      set(GLideN64_DLL_NAME libmupen64plus-video-GLideN64)
-  else()
-      set(GLideN64_DLL_NAME mupen64plus-video-GLideN64)
-  endif()
-else(MUPENPLUSAPI)
-  if(UNIX)
-    message(FATAL_ERROR "UNIX build requires MUPENPLUSAPI!")
-  endif(UNIX)
-  set(GLideN64_SOURCES_WIN
-	ZilmarPluginAPI.cpp
-	windows/Config_windows.cpp
-	windows/CommonAPIImpl_windows.cpp
-	windows/GLideN64_windows.cpp
-	windows/MemoryStatus_windows.cpp
-	common/GLFunctions.cpp
-	windows/ZilmarAPIImpl_windows.cpp
-	Graphics/OpenGLContext/windows/windows_DisplayWindow.cpp
-  )
-  set(GLideN64_DLL_NAME GLideN64)
-endif(MUPENPLUSAPI)
 
 add_subdirectory( osal )
-include_directories( osal )
 
 if (NOHQ)
-  list(APPEND GLideN64_SOURCES
-    TxFilterStub.cpp
-  )
+  list(APPEND GLideN64_SOURCES TxFilterStub.cpp)
 else (NOHQ)
   add_subdirectory( GLideNHQ )
   include_directories( GLideNHQ )
 endif(NOHQ)
 
-if(UNIX)
-  list(APPEND GLideN64_SOURCES ${GLideN64_SOURCES_UNIX})
-  if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-	add_definitions(
-	  -DOS_MAC_OS_X
-	)
-	if (NOT CMAKE_VERSION VERSION_LESS 2.8.12)
-	  set(CMAKE_MACOSX_RPATH 0)
-	endif()
-  elseif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
-	add_definitions(
-	  -DOS_LINUX
-	)
-  endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-endif(UNIX)
-
-if(MINGW)
-  add_definitions(
-    -DMINGW
-  )
-endif(MINGW)
-
-if(WIN32)
-  list(APPEND GLideN64_SOURCES ${GLideN64_SOURCES_WIN})
-  add_definitions(
-    -DOS_WINDOWS
-    -D__WIN32__
-    -DWIN32
-    -D_WIN32_ASM
-    -D_CRT_SECURE_NO_WARNINGS
-    -D__MSC__
-  )
-endif(WIN32)
-
-if(SDL)
-  include(FindPkgConfig)
-  pkg_check_modules(SDL REQUIRED sdl)
-  include_directories(${SDL_INCLUDE_DIRS})
-  add_definitions(
-	-DUSE_SDL
-  )
-endif(SDL)
-
-if(PANDORA)
-  #Pandora as a SGX530, but it should share the bugs and limitations as SGX540
-  add_definitions(
-  -DPANDORA
-  -DPowerVR_SGX_540
-  -DEGL
-   )
-endif(PANDORA)
-
-if(ODROID)
-  add_definitions(
-  -DODROID
-   )
-endif(ODROID)
-
-if(VERO4K)
-  add_definitions(
-  -DVERO4K
-   )
-endif(VERO4K)
 
 if(ANDROID)
-   add_definitions(-DOS_ANDROID -DEGL_EGLEXT_PROTOTYPES -DEGL)
    set(EGL ON)
-
    if(ANDROID_ABI STREQUAL "armeabi-v7a" OR ANDROID_ABI STREQUAL "arm64-v8a")
        set(NEON_OPT ON)
        set(VEC4_OPT ON)
@@ -271,14 +181,7 @@ if(ANDROID)
        set(VEC4_OPT ON)
    endif()
 
-   list(APPEND GLideN64_SOURCES
-           Log_android.cpp
-           Graphics/OpenGLContext/opengl_ColorBufferReaderWithEGLImage.cpp
-           Graphics/OpenGLContext/GraphicBuffer/PrivateApi/GraphicBuffer.cpp
-           Graphics/OpenGLContext/GraphicBuffer/PrivateApi/libhardware.cpp
-           Graphics/OpenGLContext/GraphicBuffer/PublicApi/android_hardware_buffer_compat.cpp
-           Graphics/OpenGLContext/GraphicBuffer/GraphicBufferWrapper.cpp
-           )
+   list(APPEND GLideN64_SOURCES ${GLideN64_SOURCES_ANDROID})
 
    list(REMOVE_ITEM GLideN64_SOURCES
            Log.cpp
@@ -293,19 +196,74 @@ if(ANDROID)
            log )
 endif(ANDROID)
 
-if(ANDROID)
-  set( FREETYPE_INCLUDE_DIRS "${ANDROID_LIB_PATH}/freetype/include" )
-elseif(UNIX OR BCMHOST)
-  set( FREETYPE_INCLUDE_DIRS "/usr/include/freetype2/" )
-else(UNIX OR BCMHOST)
-  set( ENV{FREETYPE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/../../freetype )
-endif(ANDROID)
 
-if(ANDROID)
-    add_library( ANDROID_FREETYPE
-            SHARED
-            IMPORTED )
+#########################################################
+# Build type
+#########################################################
+if( NOT CMAKE_BUILD_TYPE)
+	set( CMAKE_BUILD_TYPE Release)
+endif( NOT CMAKE_BUILD_TYPE)
 
+#########################################################
+#Global builds settings
+#########################################################
+set(CMAKE_CXX_STANDARD 11) #Set the C++ standard
+set(CMAKE_CXX_STANDARD_REQUIRED ON) #Require C++ stanard in CMAKE_CXX_STANDARD to generate the project
+set(CMAKE_CXX_EXTENSIONS OFF)
+
+add_library(GLideN64 SHARED )
+
+set(GLideN64_Output_Name GLideN64)
+set(GlideN64_Private_Compile_Definitions)
+set(GlideN64_Private_Include_Directories)
+set(GlideN64_Private_Link_Directories)
+set(GlideN64_Private_Link_Libraries)
+set(GlideN64_Private_Link_Options)
+
+
+#########################################################
+#Platform Specific Configurations
+#########################################################
+list(APPEND GlideN64_Private_Include_Directories ${CMAKE_CURRENT_LIST_DIR} ${CMAKE_CURRENT_LIST_DIR}/inc)
+
+if(SDL)
+  find_package(SDL REQUIRED)
+  list(APPEND GlideN64_Private_Include_Directories ${SDL_INCLUDE_DIR})
+  list(APPEND GlideN64_Private_Compile_Definitions USE_SDL)
+  list(APPEND GlideN64_Private_Link_Libraries ${SDL_LIBRARIES})
+endif(SDL)
+
+
+if(BCMHOST)
+  list(APPEND GlideN64_Private_Include_Directories
+    "${CMAKE_FIND_ROOT_PATH}/opt/vc/include"
+    "${CMAKE_FIND_ROOT_PATH}/opt/vc/include/interface/vcos"
+    "${CMAKE_FIND_ROOT_PATH}/opt/vc/include/interface/vmcs_host/linux"
+    "${CMAKE_FIND_ROOT_PATH}/opt/vc/include/interface/vcos/pthreads")
+
+  list(APPEND GlideN64_Private_Link_Directories
+    "${CMAKE_FIND_ROOT_PATH}/opt/vc/lib"
+    "${CMAKE_FIND_ROOT_PATH}/opt/vc/lib/GL")
+
+  list(APPEND GlideN64_Private_Compile_Definitions VC)
+endif()
+
+if(MUPENPLUSAPI)
+  set(GLideN64_Output_Name mupen64plus-video-GLideN64)
+  list(APPEND GlideN64_Private_Compile_Definitions MUPENPLUSAPI TXFILTER_LIB)
+  list(APPEND GlideN64_Private_Include_Directories ${CMAKE_CURRENT_LIST_DIR} ${CMAKE_CURRENT_LIST_DIR}/inc)
+else()
+  if(UNIX)
+    message(FATAL_ERROR "UNIX build requires MUPENPLUSAPI!")
+  endif()
+endif(MUPENPLUSAPI)
+
+####Android Support####
+if(ANDROID)
+    set(GLideN64_Output_Name libmupen64plus-video-GLideN64)
+    list(APPEND GlideN64_Private_Compile_Definitions OS_ANDROID GL_EGLEXT_PROTOTYPES EGL)
+    add_library(ANDROID_FREETYPE SHARED IMPORTED)
+    target_include_directories(ANDROID_FREETYPE PUBLIC "${ANDROID_LIB_PATH}/freetype/include")
     if( CMAKE_BUILD_TYPE STREQUAL "Debug")
         set( BUILD_VARIANT "debug" )
     else()
@@ -321,47 +279,53 @@ if(ANDROID)
             # Provides the path to the library you want to import.
             ${ANDROID_LIB_PATH}/libs/${BUILD_VARIANT}/${ANDROID_ABI}/libfreetype.so)
     set(FREETYPE_LIBRARIES ANDROID_FREETYPE)
-else(ANDROID)
-    FIND_PACKAGE( Freetype REQUIRED )
-endif(ANDROID)
+else()
+  find_package(Freetype REQUIRED )
+  list(APPEND GlideN64_Private_Link_Libraries ${FREETYPE_LIBRARIES})
+  list(APPEND GlideN64_Private_Include_Directories ${FREETYPE_INCLUDE_DIRS})
+endif()
 
-include_directories( ${FREETYPE_INCLUDE_DIRS} )
+####Windows Support####
+if(WIN32)
+  list(APPEND GLideN64_SOURCES ${GLideN64_SOURCES_WIN})
+  list(APPEND GlideN64_Private_Compile_Definitions OS_WINDOWS __WIN32__ WIN32 _WIN32_ASM _CRT_SECURE_NO_WARNINGS __MSC__)
+endif(WIN32)
 
-if(VEC4_OPT)
-  add_definitions(
-    -D__VEC4_OPT
-  )
-endif(VEC4_OPT)
+  
+#Mac OSX
+if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+  list(APPEND GLideN64_SOURCES ${GLideN64_SOURCES_UNIX})
+  list(APPEND GlideN64_Private_Compile_Definitions OS_MAC_OS_X)
+  if (NOT CMAKE_VERSION VERSION_LESS 2.8.12)
+    set(CMAKE_MACOSX_RPATH 0)
+  endif()
+#Linux
+elseif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+  list(APPEND GLideN64_SOURCES ${GLideN64_SOURCES_UNIX})
+  list(APPEND GlideN64_Private_Compile_Definitions OS_LINUX)
+endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+
+#########################################################
+#Build Environment Specific Configurations
+#########################################################
+if(MINGW)
+  list(APPEND GlideN64_Private_Compile_Definitions MINGW)
+endif()
 
 if(CRC_ARMV8)
-  list(REMOVE_ITEM GLideN64_SOURCES
-	CRC32.cpp
-  )
-  list(APPEND GLideN64_SOURCES
-	CRC32_ARMV8.cpp
-  )
+  list(REMOVE_ITEM GLideN64_SOURCES CRC32.cpp )
+  list(APPEND GLideN64_SOURCES CRC32_ARMV8.cpp )
 elseif(CRC_OPT)
-  list(REMOVE_ITEM GLideN64_SOURCES
-    CRC32.cpp
-  )
-  list(APPEND GLideN64_SOURCES
-    CRC_OPT.cpp
-    xxHash/xxhash.c
-  )
+  list(REMOVE_ITEM GLideN64_SOURCES CRC32.cpp)
+  list(APPEND GLideN64_SOURCES CRC_OPT.cpp xxHash/xxhash.c)
 elseif(CRC_NEON)
-  list(REMOVE_ITEM GLideN64_SOURCES
-    CRC32.cpp
-  )
-  list(APPEND GLideN64_SOURCES
-    Neon/CRC_OPT_NEON.cpp
-    xxHash/xxhash.c
-  )
-endif(CRC_ARMV8)
+  list(REMOVE_ITEM GLideN64_SOURCES CRC32.cpp )
+  list(APPEND GLideN64_SOURCES Neon/CRC_OPT_NEON.cpp xxHash/xxhash.c)
+endif()
 
 if(NEON_OPT)
-  add_definitions(
-    -D__NEON_OPT
-  )
+  list(APPEND GlideN64_Private_Compile_Definitions __NEON_OPT)
+
   list(APPEND GLideN64_SOURCES
     Neon/3DMathNeon.cpp
     Neon/gSPNeon.cpp
@@ -371,126 +335,88 @@ if(NEON_OPT)
     3DMath.cpp
     RSP_LoadMatrix.cpp
   )
-endif(NEON_OPT)
-
-if(X86_OPT)
-  list(APPEND GLideN64_SOURCES
-    RSP_LoadMatrixX86.cpp
-  )
-  list(REMOVE_ITEM GLideN64_SOURCES
-    RSP_LoadMatrix.cpp
-  )
-endif(X86_OPT)
-
-# Build type
-
-if( NOT CMAKE_BUILD_TYPE)
-	set( CMAKE_BUILD_TYPE Release)
-endif( NOT CMAKE_BUILD_TYPE)
-
-if( CMAKE_BUILD_TYPE STREQUAL "Debug")
-	set( CMAKE_BUILD_TYPE Debug)
-	set( DEBUG_BUILD TRUE)
-	add_definitions(
-	-DGL_DEBUG
-	)
-endif( CMAKE_BUILD_TYPE STREQUAL "Debug")
-
-if(GL_PROFILE)
-    add_definitions(
-            -DGL_PROFILE -DGL_DEBUG
-    )
-endif(GL_PROFILE)
-
-if(EGL)
-  add_definitions(
-    -DEGL
-  )
-  set(OPENGL_LIBRARIES ${EGL_LIB})
-else(EGL)
-  find_package(OpenGL REQUIRED)
-  include_directories(${OpenGL_INCLUDE_DIRS})
-  link_directories(${OpenGL_LIBRARY_DIRS})
-  add_definitions(${OpenGL_DEFINITIONS})
-  if(NOT OPENGL_FOUND)
-  	message(ERROR " OPENGL not found!")
-  endif(NOT OPENGL_FOUND)
-endif(EGL)
-
-if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-  #check for compiler version
-  execute_process(COMMAND ${CMAKE_CXX_COMPILER} -dumpversion OUTPUT_VARIABLE G++_VERSION)
-  if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" AND G++_VERSION VERSION_LESS 4.8)
-    message("Found compiler version " ${G++_VERSION})
-    message(SEND_ERROR "You need at least G++ 4.8 to compile GLideN64!")
-  elseif(G++_VERSION VERSION_LESS 3.3)
-    message("Found compiler version " ${G++_VERSION})
-    message(SEND_ERROR "You need at least Clang 3.3 to compile GLideN64!")
-  endif()
-  set(GCC_CPP11_COMPILE_FLAGS "-std=c++11")
-  set( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_CPP11_COMPILE_FLAGS}" )
-  if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-    set(GCC_STATIC_LINK_FLAGS "-static-libgcc")
-  endif()
-  set( CMAKE_SHARED_LINKER_FLAGS  "${CMAKE_SHARED_LINKER_FLAGS} ${GCC_STATIC_LINK_FLAGS}" )
 endif()
 
-set(CMAKE_CXX_STANDARD 11)
+#########################################################
+#Find and configure packages
+#########################################################
+if(EGL)
+  add_definitions(-DEGL)
+  set(OPENGL_LIBRARIES ${EGL_LIB})
+else(EGL)
+  cmake_policy(SET CMP0072 NEW)
+  find_package(OpenGL REQUIRED)
+  list(APPEND GlideN64_Private_Include_Directories ${OpenGL_INCLUDE_DIRS})
+  list(APPEND GlideN64_Private_Link_Directories ${OpenGL_LIBRARY_DIRS})
+  list(APPEND GlideN64_Private_Compile_Definitions ${OpenGL_DEFINITIONS})
+endif(EGL)
 
-add_library( ${GLideN64_DLL_NAME} SHARED ${GLideN64_SOURCES} ${PATH_REVISION})
+#########################################################
+#Include Directories
+#########################################################
 
-if( CMAKE_BUILD_TYPE STREQUAL "Debug")
-  SET_TARGET_PROPERTIES(
-	${GLideN64_DLL_NAME}
-	PROPERTIES
-	LINKER_LANGUAGE CXX # Or else we get an error message, because cmake can't figure out from the ".o"-suffix that it is a C-linker we need.
-	PREFIX ""
-	LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/plugin/Debug
-  )
 
-  if(SDL)
-        if (NOHQ)
-	  target_link_libraries(${GLideN64_DLL_NAME} PRIVATE ${OPENGL_LIBRARIES} ${SDL_LIBRARIES} ${FREETYPE_LIBRARIES} ${LOG_LIB} osald )
-	else (NOHQ)
-	  target_link_libraries(${GLideN64_DLL_NAME} PRIVATE ${OPENGL_LIBRARIES} ${SDL_LIBRARIES} ${FREETYPE_LIBRARIES} ${LOG_LIB} osald GLideNHQd )
-	endif (NOHQ)
-  else(SDL)
-	if (NOHQ)
-	  target_link_libraries(${GLideN64_DLL_NAME} PRIVATE ${OPENGL_LIBRARIES} ${FREETYPE_LIBRARIES} ${LOG_LIB} osald )
-	else (NOHQ)
-	  target_link_libraries(${GLideN64_DLL_NAME} PRIVATE ${OPENGL_LIBRARIES} ${FREETYPE_LIBRARIES} ${LOG_LIB} osald GLideNHQd )
-	endif (NOHQ)
-  endif(SDL)
-endif( CMAKE_BUILD_TYPE STREQUAL "Debug")
+#########################################################
+#Compile definitions
+#########################################################
 
-if( CMAKE_BUILD_TYPE STREQUAL "Release")
-  include(CheckIPOSupported)
-  check_ipo_supported(RESULT result)
-  if(result)
-    message("Interprocedural optimizations enabled")
-    set_property(TARGET ${GLideN64_DLL_NAME} PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
-    set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -O3")
-  endif()
+#Pandora as a SGX530, but it should share the bugs and limitations as SGX540
+if(PANDORA)
+  list(APPEND GlideN64_Private_Compile_Definitions PANDORA PowerVR_SGX_540 EGL)
+endif()
 
-  SET_TARGET_PROPERTIES(
-	${GLideN64_DLL_NAME}
-	PROPERTIES
-	LINKER_LANGUAGE CXX # Or else we get an error message, because cmake can't figure out from the ".o"-suffix that it is a C-linker we need.
-	PREFIX ""
-	LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/plugin/Release
-  )
+if(GL_PROFILE)
+    list(APPEND GlideN64_Private_Compile_Definitions GL_PROFILE GL_DEBUG)
+endif()
 
-  if(SDL)
-	if (NOHQ)
-	  target_link_libraries(${GLideN64_DLL_NAME} ${OPENGL_LIBRARIES} ${SDL_LIBRARIES} ${FREETYPE_LIBRARIES} ${LOG_LIB} osal )
-	else (NOHQ)
-	  target_link_libraries(${GLideN64_DLL_NAME} ${OPENGL_LIBRARIES} ${SDL_LIBRARIES} ${FREETYPE_LIBRARIES} ${LOG_LIB} osal GLideNHQ )
-	endif (NOHQ)
-  else(SDL)
-	if (NOHQ)
-	  target_link_libraries(${GLideN64_DLL_NAME} ${OPENGL_LIBRARIES} ${FREETYPE_LIBRARIES} ${LOG_LIB} osal )
-	else (NOHQ)
-	  target_link_libraries(${GLideN64_DLL_NAME} ${OPENGL_LIBRARIES} ${FREETYPE_LIBRARIES} ${LOG_LIB} osal GLideNHQ )
-	endif (NOHQ)
-  endif(SDL)
-endif( CMAKE_BUILD_TYPE STREQUAL "Release")
+if(ODROID)
+  list(APPEND GlideN64_Private_Compile_Definitions ODROID)
+endif()
+
+if(VEC4_OPT)
+  list(APPEND GlideN64_Private_Compile_Definitions __VEC4_OPT)
+endif()
+
+if(VERO4K)
+  list(APPEND GlideN64_Private_Compile_Definitions VERO4K)
+endif()
+
+
+if(CMAKE_BUILD_TYPE STREQUAL "Debug" AND NOT GL_PROFILE)
+  list(APPEND GlideN64_Private_Compile_Definitions GL_DEBUG)
+endif()
+
+#########################################################
+#Link Directories
+#########################################################
+
+#########################################################
+#Linker flags
+#########################################################
+if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+    list(APPEND GlideN64_Private_Link_Options "-static-libgcc")
+endif()
+
+#########################################################
+#Generate the list of libraries that we need to link with
+#########################################################
+list(APPEND GlideN64_Private_Link_Libraries ${OPENGL_LIBRARIES} ${FREETYPE_LIBRARIES} ${LOG_LIB} osal GLideNHQ)
+
+if(NOT CMAKE_BUILD_TYPE STREQUAL "Debug" AND NOT CMAKE_BUILD_TYPE STREQUAL "Release")
+  message(FATAL_ERROR "Invalid Configraion set ${CMAKE_BUILD_TYPE}")
+endif()
+
+#########################################################
+#Wrap it all together
+#########################################################
+target_sources(GLideN64 PRIVATE ${GLideN64_SOURCES} ${PATH_REVISION})
+target_compile_definitions(GLideN64 PRIVATE ${GlideN64_Private_Compile_Definitions})
+target_link_directories(GLideN64 PRIVATE ${GlideN64_Private_Link_Directories})
+target_link_options(GLideN64 PRIVATE ${GlideN64_Private_Link_Options})
+target_link_libraries(GLideN64 PRIVATE ${GlideN64_Private_Link_Libraries})
+target_include_directories(GLideN64 PRIVATE ${GlideN64_Private_Include_Directories})
+set_target_properties(GLideN64
+                      PROPERTIES
+                      PREFIX ""
+                      LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/plugin/${CMAKE_BUILD_TYPE}
+                      OUTPUT_NAME ${GLideN64_Output_Name})
