--- a/projects/msvc/GLideNUI.vcxproj
+++ b/projects/msvc/GLideNUI.vcxproj
@@ -88,6 +88,7 @@
   <ItemGroup>
     <ClCompile Include="..\..\src\GLideNUI\About.cpp" />
     <ClCompile Include="..\..\src\GLideNUI\config-emulation.cpp" />
+    <ClCompile Include="..\..\src\GLideNUI\config-framebuffer.cpp" />
     <ClCompile Include="..\..\src\GLideNUI\config-overscan.cpp" />
     <ClCompile Include="..\..\src\GLideNUI\config-tab.cpp" />
     <ClCompile Include="..\..\src\GLideNUI\config-video.cpp" />
@@ -104,6 +105,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\GLideNUI\About.h" />
+    <ClInclude Include="..\..\src\GLideNUI\config-framebuffer.h" />
     <ClInclude Include="..\..\src\GLideNUI\config-video.h" />
     <ClInclude Include="..\..\src\GLideNUI\ConfigDlg.h" />
     <ClInclude Include="..\..\src\GLideNUI\FileClass.h" />
