--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ sudo:     false
 
 addons:
   apt:
+    sources:
+    - sourceline: 'deb https://apt.kitware.com/ubuntu/ bionic main'
+      key_url: 'https://apt.kitware.com/keys/kitware-archive-latest.asc'
+    update: true
     packages:
     - libgl1-mesa-dev
     - cmake
