--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ addons:
     packages:
     - libgl1-mesa-dev
     - cmake
+    sources:
+    - sourceline: 'deb https://apt.kitware.com/ubuntu/ bionic main'
+      key_url: 'https://apt.kitware.com/keys/kitware-archive-latest.asc'
 
 language: cpp
 
